--- a/src/main/resources/templates/company-info.html
+++ b/src/main/resources/templates/company-info.html
@@ -10,18 +10,32 @@
     <div class="home__left">
       <div class="heading__info">
         <h1>Invest in <span th:text="${company.companyname}"/></h1>
-
-        <h5 class='gray'>Feeding the distanced customer with taste.</h5>
+        <h5 class='gray'>193 people have already invested 2,700,000+ in [[${company.companyname}]].</h5>
       </div>
-     <div th:if="${status eq 'on limit'}">
-      <a th:href="@{'/company/details/'+${company.id}+'/'}" class='btn mt-20 mb-20'> Invest Now</a>
-    </div>
-    <div th:if="${status eq 'limit reached'}">
-		<p>you have already invested up to maximum quantity</p> 
-	</div>
-	<div th:if="${status eq 'time finish'}">
-		<p>investment for this company has closed</p> 
-	</div>
+      <div th:if="${status eq 'on limit'}">
+        <a th:href="@{'/company/details/'+${company.id}+'/'}" class='btn mt-20 mb-20'> Invest Now</a>
+      </div>
+      <div th:if="${status eq 'limit reached'}">
+		    <p>you have already invested up to maximum quantity</p> 
+	    </div>
+	    <div th:if="${status eq 'time finish'}">
+		    <p>investment for this company has closed</p> 
+	    </div>
+      <div class="full__width" style="margin: 30px 0;">
+        <nav class='container nav__container'>
+          <div class="left">
+              <ul>
+                <li><a href="#company-details">Details</a></li>
+                <li><a th:href="@{/companyregister}">Documents</a></li>
+                <li><a th:href="@{/company}">Success Stories</a></li>
+                <li><a href="#management-teams">Management</a></li>
+                <li><a href="#">More Information</a></li>
+              </ul>
+          </div>
+        </nav>
+      </div>
+
+      <h3 id='company-details'>Company Details</h3>
       <p class='gray f-13'>This Reg A+ offering is made available through Sanolagani Primary.
         This investment is speculative, illiquid, and involves a high degree of
         risk, including possible loss of your entire investment. For more
@@ -29,7 +43,61 @@
         and Related Risks. In addition, as described in the Offering Circular,
         the Company retains the right to continue the offering beyond the Termination Date.
         in its sole discretion.</p>
+
+        <h3 id='management-teams'>Management Team</h3>
+          <table class="bod">
+            <thead>
+                <th>Management Team</th>
+                <th>Position</th>
+                <th>Social</th>
+            </thead>
+            <!-- <tr th:each="management : ${company.managements}">
+              <td th:text="${management.name}"></td>
+              <td th:text="${management.position}"></td>
+              <td><a th:href="${management.linkedin}">LinkedIn</a></td>
+            </tr> -->
+            <tbody>
+              <tr>
+                <td>Mr. Keshab Kumar Basnet</td>
+                <td>Chairman</td>
+                <td><a href="#">LinkedIn</a></td>
+              </tr>
+              <tr>
+                <td>Bishnu Prasad Bhusal</td>
+                <td>Under Secretary</td>
+                <td><a href="#">LinkedIn</a></td>
+              </tr>
+              <tr>
+                <td>Mr. Raj Kumar Khatiwada</td>
+                <td>Board of Director</td>
+                <td><a href="#">LinkedIn</a></td>
+              </tr>
+              <tr>
+                <td>Mr. Devi Prasad Baral</td>
+                <td>Board of Director</td>
+                <td><a href="#">LinkedIn</a></td>
+              </tr>
+              <tr>
+                <td>Mr. Lil Bahadur Basnet</td>
+                <td>Board of Director</td>
+                <td><a href="#">LinkedIn</a></td>
+              </tr>
+              <tr>
+                <td>Mr. Kuber Prasad Rai</td>
+                <td>Board of Director</td>
+                <td><a href="#">LinkedIn</a></td>
+              </tr>
+              <tr>
+                <td>Mr Ramesh Chaudhary</td>
+                <td>Board of Director</td>
+                <td><a href="#">LinkedIn</a></td>
+              </tr>
+            </tbody>
+          </table>
+        </h3>
     </div>
+
+
     <div class="home__right" style="min-height: 60vh;">
       <img th:src="@{'/documents/' + ${company.id} + '/' + ${company.image}}" alt="heading" />
     </div>
