several feature changes

--- a/src/main/resources/templates/company-list.html
+++ b/src/main/resources/templates/company-list.html
@@ -10,8 +10,7 @@
   <!-- All Companies -->
   <section class='mostfunded__section'>
     <div class="container mostfunded__container">
-      <h2>Highest Invest Opportunity</h2>
-      <h5>Offerings that have raised the highest money</h5>
+      <h2>Companies</h2>
       <div class="cards row">
 
         <div class="card " th:each="company : ${companies}">
