--- a/src/main/resources/templates/fragment/investment-guidelines.html
+++ b/src/main/resources/templates/fragment/investment-guidelines.html
@@ -27,7 +27,7 @@
       <div class="invest__fourth">
         <h2 class='gray'>4.</h2>
         <h2 class='text-upper'>hold</h2>
-        <h2 class='text-upper'>or sell</h2>
+        <h2 class='text-upper'>stock</h2>
         <p class='invest__desc'>You can continue to invest in future
           rounds, hold on to your investment, or sell eligible securities on
           Sanolagani’s investment platform.</p>
