--- a/src/main/resources/templates/fragment/nav.html
+++ b/src/main/resources/templates/fragment/nav.html
@@ -14,7 +14,8 @@
 		<ul>
 			<li sec:authorize="hasRole('ROLE_ANONYMOUS')"><a th:href="@{/login}">Login</a></li>
 			<li sec:authorize="hasRole('ROLE_ANONYMOUS')"><a th:href="@{/register}">Sign Up</a></li>
-
+			
+            <li sec:authorize="hasRole('ROLE_USER')"><a th:href="@{/company/mywatchlist}">My Watchlist</a></li>
 			<li sec:authorize="hasRole('ROLE_USER') or hasRole('ROLE_COMPANY') or hasRole('ROLE_ADMIN')"><a th:href="@{/dashboard}">portfolio</a>
 			</li>
 			<li sec:authorize="hasRole('ROLE_USER') or hasRole('ROLE_COMPANY') or hasRole('ROLE_ADMIN')"><a th:href="@{/logout}">logout</a></li>
