--- a/src/main/resources/templates/viewinvestment.html
+++ b/src/main/resources/templates/viewinvestment.html
@@ -5,8 +5,8 @@
 <head>
 	
   <title>View Investment</title>
-  <link rel="stylesheet" type="text/css" href="css/viewpage.css">
-  <link rel="stylesheet" type="text/css" href="css/admindashboard.css">
+  <link rel="stylesheet" type="text/css" th:href="@{/css/viewpage.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{/css/admindashboard.css}">
 </head>
 <body>
 	
