--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
 	<!-- Most Momentum -->
 	<section class='momentum__section'>
 		<div class="container momentum__container">
-			<h2>Highest Invest Opportunity</h2>
+			<h2>Highest Raised</h2>
 			<h5>Offerings that have raised the highest money</h5>
 			<div class="cards row">
 				<div class="card" th:each="company : ${companybasedoncapital}" th:if="${company.status eq 'raising'}">
@@ -53,48 +53,42 @@
 	<!-- Most Funded -->
 	<section class='mostfunded__section'>
 		<div class="container mostfunded__container">
-			<h2>Most Funded</h2>
+			<h2>Recently Launched</h2>
 			<h5>Offerings that have raised the most money in the last few
 				days</h5>
 
-			<div class="cards">
-				<div class="card">
-					<a href="#"><img src="" class='card__image' alt="card-image" /></a>
-
-					<h3>
-						<a href="#">Timeplast</a>
-					</h3>
 					<div class="cards row">
 						<div class="card " th:each="company : ${companybasedondate}">
 							<a th:href="@{'/company/'+${company.id}+'/'}"> <img
 								th:src="@{'/documents/' + ${company.id} + '/' + ${company.image}}"
 								class='card__image' alt="card-image" />
-								<h3>Timeplast</h3>
+						  <h3 th:text="${company.companyname}" />
 							</a>
-							<p class='desc'>The palstic that completely disintegrate...</p>
+					<p class='desc'>The palstic that completely disintegrate...</p>
 
-							<div class="card__score">
-								<div class="raised">
-									<h3 th:text="${company.previouslyraisedcapital}"></h3>
-									<p class='desc'>Raised</p>
-								</div>
-								<div class="investers">
-									<h3 th:text="${company.companyname}"></h3>
-									<p class='desc'>CompanyName</p>
-								</div>
-								<div class="min__investment">
-									<h3 th:text="${company.maximum_quantity}" />
-									<p class='desc'>Min. Investment</p>
-								</div>
-
-							</div>
-
-							<div class="division">
-								<p>Reg CF via Sanolagani Capital, Ltd.</p>
-							</div>
+					<div class="card__score">
+						<div class="raised">
+							<h3>Rs.
+								[[${#numbers.formatInteger(company.previouslyraisedcapital, 3,
+								'COMMA')}]]</h3>
+							<p class='desc'>Capital To Raise</p>
+						</div>
+						<div class="investers">
+							<h3>400</h3>
+							<p class='desc'>Price per Unit</p>
+						</div>
+						<div class="min__investment">
+							<h3 th:text="${company.maximum_quantity}" />
+							<p class='desc'>Max. Quantity</p>
 						</div>
 					</div>
+
+					<div class="division">
+						<p>Reg CF via Sanolagani Capital, Ltd.</p>
+					</div>
 				</div>
+			</div>
+		</div>
 	</section>
 
 
@@ -109,25 +103,25 @@
 					<a th:href="@{'/company/'+${company.id}+'/'}"> <img
 						th:src="@{'/documents/'+${company.id}+'/'+${company.image}}"
 						class='card__image' alt="card-image" />
-						<h3>Timeplast</h3>
+						<h3 th:text="${company.companyname}" />
 					</a>
-
 					<p class='desc'>The palstic that completely disintegrate...</p>
 
 					<div class="card__score">
 						<div class="raised">
-							<h3 th:text="${company.previouslyraisedcapital}"></h3>
-							<p class='desc'>Raised</p>
+							<h3>Rs.
+								[[${#numbers.formatInteger(company.previouslyraisedcapital, 3,
+								'COMMA')}]]</h3>
+							<p class='desc'>Capital To Raise</p>
 						</div>
 						<div class="investers">
-							<h3 th:text="${company.companyname}"></h3>
-							<p class='desc'>CompanyName</p>
+							<h3>400</h3>
+							<p class='desc'>Price per Unit</p>
 						</div>
 						<div class="min__investment">
 							<h3 th:text="${company.maximum_quantity}" />
-							<p class='desc'>Min. Investment</p>
+							<p class='desc'>Max. Quantity</p>
 						</div>
-
 					</div>
 
 					<div class="division">
@@ -137,7 +131,7 @@
 			</div>
 		</div>
 	</section>
-	
+
 <section class='momentum__section'
 		sec:authorize="hasRole('ROLE_USER') or hasRole('ROLE_COMPANY')">
 		<div class="container momentum__container">
@@ -149,25 +143,25 @@
 					<a th:href="@{'/company/'+${company.id}+'/'}"> <img
 						th:src="@{'/documents/'+${company.id}+'/'+${company.image}}"
 						class='card__image' alt="card-image" />
-						<h3>Timeplast</h3>
+					<h3 th:text="${company.companyname}" />
 					</a>
-
-					<p class='desc'>The palstic that completely disintegrate...</p>
+					<p class='desc'>he palstic that completely disintegrate...</p>
 
 					<div class="card__score">
 						<div class="raised">
-							<h3 th:text="${company.previouslyraisedcapital}"></h3>
-							<p class='desc'>Raised</p>
+							<h3>Rs.
+								[[${#numbers.formatInteger(company.previouslyraisedcapital, 3,
+								'COMMA')}]]</h3>
+							<p class='desc'>Capital To Raise</p>
 						</div>
 						<div class="investers">
-							<h3 th:text="${company.companyname}"></h3>
-							<p class='desc'>CompanyName</p>
+							<h3>400</h3>
+							<p class='desc'>Price per Unit</p>
 						</div>
 						<div class="min__investment">
 							<h3 th:text="${company.maximum_quantity}" />
-							<p class='desc'>Min. Investment</p>
+							<p class='desc'>Max. Quantity</p>
 						</div>
-
 					</div>
 
 					<div class="division">
