--- a/src/main/resources/templates/company-info.html
+++ b/src/main/resources/templates/company-info.html
@@ -25,11 +25,11 @@
         <nav class='container nav__container'>
           <div class="left">
               <ul>
-                <li><a href="#company-details">Details</a></li>
-                <li><a th:href="@{/companyregister}">Documents</a></li>
-                <li><a th:href="@{/company}">Success Stories</a></li>
-                <li><a href="#management-teams">Management</a></li>
-                <li><a href="#">More Information</a></li>
+                <li><a href="#company-details"  class="nav-link-sm-text">Details</a></li>
+                <li><a th:href="@{/companyregister}" class="nav-link-sm-text">Documents</a></li>
+                <li><a th:href="@{/company}" class="nav-link-sm-text">Success Stories</a></li>
+                <li><a href="#management-teams" class="nav-link-sm-text">Management</a></li>
+                <li><a href="#" class="nav-link-sm-text">More Information</a></li>
               </ul>
           </div>
         </nav>
