--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -36,7 +36,7 @@
                                 <span>Amount: Rs.&nbsp;
                                     <input type="number" class="detail__input" name="amount" id="paymentAmount">
                                 </span>
-                                <span id="message" style="color:red; background-color: #ff22gg"></span>
+                                <span id="message" style="color:crimson; background-color: #ff22gg"></span>
 
                                 <button class="btn" id="confirm">Confirm</button>
 
