--- a/src/main/resources/templates/companydashboard.html
+++ b/src/main/resources/templates/companydashboard.html
@@ -35,16 +35,8 @@
         labels: [[${labels}]],
         datasets: [
           {
-             label: "Revenue",
-             data: [20000, 30000, 25000, 35000, 28000, 40000],
-             backgroundColor: "rgba(75, 192, 192, 0.2)",
-             borderColor: "rgba(75, 192, 192, 1)",
-              borderWidth: 1,
-             fill: "+1"
-          },
-          {
             label: "Investment Amount",
-            data: [15000, 22000, 18000, 28000, 21000, 32000],
+            data: [[${investedamount}]],
         	backgroundColor: "rgba(255, 99, 132, 0.2)",
         	borderColor: "rgba(255, 99, 132, 1)",
         	borderWidth: 1,
@@ -52,7 +44,7 @@
           },
           {
             label: "User Acquisition",
-        	data: [1000, 1500, 1200, 1800, 1400, 2000],
+        	data: [[${totaluseracquisition}]],
        		backgroundColor: "rgba(255, 205, 86, 0.2)",
        		borderColor: "rgba(255, 205, 86, 1)",
        		borderWidth: 1,
