--- a/src/main/resources/templates/fragment/nav.html
+++ b/src/main/resources/templates/fragment/nav.html
@@ -25,13 +25,13 @@
 			<div class="sub-menu-wrap">
 				<div class="sub-menu">
 					<div class="sub-menu-user-info">
-						<h2>[[${#authentication.principal.getFname}]][[${#authentication.principal.getLname}]]</h2>
+						<h2 sec:authorize="hasRole('ROLE_USER')">[[${#authentication.principal.getFname}]][[${#authentication.principal.getLname}]]</h2>
 					</div>
 					<hr>
 					<a th:href="@{/dashboard}" class="sub-menu-link">
 						<p>Portfolio</p>
 					</a>
-					<a href="#" class="sub-menu-link">
+					<a th:href="@{/change_password}" class="sub-menu-link">
 						<p>Change Password</p>
 					</a>
 					<a href="#" class="sub-menu-link">
