working on company overview

--- a/src/main/resources/static/css/Home.css
+++ b/src/main/resources/static/css/Home.css
@@ -41,3 +41,18 @@
 .bod a{
     color: var(--color-black);
 }
+
+.message-maximum-invested{
+    color: var(--color-message-postitive-text);
+    border: 1px dashed var(--color-message-positive-border);
+    background: var(--color-message-positive-bg);
+    border-radius: 7px;
+    font-size: .8rem;
+    font-weight: 500;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    text-align: center;
+    height: 2rem;
+    padding-top: .4rem;
+    line-height: 1.25rem;
+}
