--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -58,6 +58,10 @@
 	--container-width-sm: 90%;
 
 	--text-sm: 0.9rem;
+
+	--color-message-positive-bg: #c7f9cc;
+	--color-message-postitive-text: #075216;
+	--color-message-positive-border: #ffca3a;
 }
 
 html {
@@ -78,7 +82,7 @@ body {
 /* ===================== GENERAL STYLES ========================= */
 .container {
 	width: var(--container-width-lg);
-	margin: 0 auto;
+	margin: 5px auto;
 }
 
 h1, h2, h3, h4 {
@@ -132,7 +136,7 @@ a {
     font-size: 18px;
 }
 .btn:hover{
-	background: rgb(180, 178, 178);
+	background: #303030;
 	color: #fff;
 }
 
