--- a/src/main/resources/static/css/companydashboard.css
+++ b/src/main/resources/static/css/companydashboard.css
@@ -49,7 +49,15 @@ body {
   /* Add other styling properties as needed */
 }
 
-
-
-
+sup{
+    color: #fff;
+    background-color: crimson;
+    padding: 2px;
+    border-radius: 50%;
+    font-size: .8rem;
+    width: 1.2rem;
+    height: 1.2rem;
+    text-align: center;
+    margin-left: 5px;
+}
 
