--- a/src/main/resources/static/css/details.css
+++ b/src/main/resources/static/css/details.css
@@ -21,9 +21,13 @@
 
 .details__buttons{
     display: flex;
-    justify-content: space-around;
-    margin-bottom: 2rem;
+    justify-content: center;
+    margin: 2rem;
 }
+.amount{
+    margin:0 1rem;
+}
+
 .detail__input{
     height: 2rem;
     border: none;
@@ -38,6 +42,8 @@
     flex-direction: column;
     align-items: center;
 }
+
+
 .left__detail-bottom{
     margin-top: 3rem;
     font-size: 18px;
@@ -105,19 +111,19 @@
   text-align: center;
   background: #fafafa;
   color: #337ab7;
-  margin: 10px 30px;
-  width: 75%;
+  margin: 10px;
+  width: 100%;
   background: #efefef;
 
 }
 
 .pay{
-    width:90px;
-    height: 45px;
-    border: none;
-    margin: 10px 20px;
+    width: 130px;
+    height: 130px;
+    border: transparent;
     cursor: pointer;
-    overflow:hidden;
+    overflow: hidden;
+    background: transparent;
 
 }
 
