--- a/src/main/resources/templates/companydashboard.html
+++ b/src/main/resources/templates/companydashboard.html
@@ -8,17 +8,7 @@
 <body>
 
   <div class="container">
-    <div class="sidebar">
-        <ul>
-            <li><a href="#" class="active">Dashboard</a></li>
-            <li><a href="#">Company Overview</a></li>
-            <li><a href="#">Investment Details</a></li>
-            <li><a href="#">Shareholder Management</a></li>
-            <li><a href="#">Financial Performance</a></li>
-            <li><a href="#">Documents and Reports</a></li>
-            <li><a th:href="@{/notification}">Notification</a></li>
-            <li><a th:href="@{/logout}">Setting and Account Management</a></li>
-        </ul>
+    <div th:replace="fragment/company-dashboard.html :: sidebar">
     </div>
     <div class="chart-container">
       <canvas id="lineChart"></canvas>
