--- a/src/main/resources/static/css/company_registration.css
+++ b/src/main/resources/static/css/company_registration.css
@@ -57,11 +57,20 @@
     /* border-radius: 8px; */
     font-size: 18px;
     /* color: var(--color-gray); */
-    color: var(--color-blue);
+    color: var(--color-gray);
 }
 .upload-doc {
     border: 1px solid gray;
     height: 32px;
-    font-size: 18px;
+    font-size: 17px;
     border-radius: 5px;
+    color: green;
 }
+::-webkit-file-upload-button{
+    border: none;
+    border-right: 1px solid gray;
+    border-radius: 8px;
+    padding: 5px 10px;
+    color: gray;
+    
+}  
