--- a/src/main/resources/static/css/details.css
+++ b/src/main/resources/static/css/details.css
@@ -1,3 +1,6 @@
+.details{
+    margin: 30px 0;
+}
 .details__container{
     display: grid;
     grid-template-columns: 2fr 1fr;
@@ -5,14 +8,16 @@
 }
 /* ================== left container ================= */
 .left__detail-main{
-    padding-top: 10px;
-    /* margin-top: 2rem; */
-    text-align: center;
-    /* border: 1px solid black; */
+    border-radius: 8px;
+    padding: 30px 0;
+    background: var(--color-background);
 }
 .left__detail h5{
-    /* background-color: green; */
-    font-size: 15px;
+    text-align: center;
+    color: var(--color-blue);
+    font-size: 28px;
+    margin-bottom: 20px;
+    text-transform: capitalize;
 }
 .left__detail h2{
     font-size: 18px;
@@ -26,8 +31,8 @@
 }
 .detail__input{
     height: 2rem;
-    border: none;
-    background: var(--color-light-gray);
+    border: 0.5px solid gray;
+    background: var(--color-background);
     margin-bottom: 2rem;
     padding: 3px 10px;
     font-size: 15px;
@@ -72,6 +77,10 @@
 .detail__info p{
     font-size: 13px;
 }
+.detail__info p a{
+    color: #000 !important;
+    font-size: 15px;
+}
 .additinoal__info{
     font-size: 13px;
     color: var(--color-blue-variant);
@@ -101,7 +110,7 @@
 
 #fund-management {
   cursor: pointer;
-  text-decoration: underline;
+  /* text-decoration: underline; */
   text-align: center;
   background: #fafafa;
   color: #337ab7;
@@ -109,6 +118,9 @@
   width: 75%;
   background: #efefef;
 
+}
+#fund-management:hover{
+    text-decoration: underline;
 }
 
 .pay{
@@ -121,10 +133,10 @@
 
 }
 
-img{
+.pay img{
     width: inherit;
     height: inherit;
-    object-fit: fill;
+    object-fit: scale-down;
 }
 
 .payment-success-message{
