--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -118,7 +118,7 @@ a {
     display: inline-block;
     color: #000;
     padding: 5px 10px;
-    border-radius: 10px;
+    border-radius: 8px;
     text-align: center;
     cursor: pointer;
     border: 1px solid #000;
@@ -193,6 +193,7 @@ img {
 	background: #fff;
 	display: none;
 	transition: all 400ms ease;
+	z-index: 99;
 	/* border-radius: 10px; */
 	
 }
