--- a/src/main/resources/templates/changepassword.html
+++ b/src/main/resources/templates/changepassword.html
@@ -1,91 +1,64 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-  <head th:insert="fragment/head.html :: headerfiles">
-    <meta charset="UTF-8" />
-    <title>Forgot Password?</title>
-  </head>
 
-  <body>
-    <header
-      class="container header__container"
-      th:replace="fragment/header.html :: header"
-    ></header>
-    <div class="full__width" th:insert="fragment/nav.html :: navbar"></div>
-    <section>
-      <div class="container login__container">
-        <div class="login__left">
-          <img th:src="@{'photos/register.png'}" alt="image" />
+<head th:insert="fragment/head.html :: headerfiles">
+  <meta charset="UTF-8" />
+  <title>Forgot Password?</title>
+</head>
+
+<body>
+  <header class="container header__container" th:replace="fragment/header.html :: header"></header>
+  <div class="full__width" th:insert="fragment/nav.html :: navbar"></div>
+  <section>
+    <div class="container login__container">
+      <div class="login__left">
+        <img th:src="@{'photos/register.png'}" alt="image" />
+      </div>
+      <div class="login__right">
+        <div class="heading__background">
+          <a th:href="@{/login}">
+            <h2>Login</h2>
+          </a>
+          <a th:href="@{/register}">
+            <h2>Sign Up</h2>
+          </a>
         </div>
-        <div class="login__right">
-          <div class="heading__background">
-            <a th:href="@{/login}"><h2>Login</h2></a>
-            <a th:href="@{/register}"><h2>Sign Up</h2></a>
-          </div>
-          <form th:action="@{/updatepassword}" method="post">
-            <input
-              class="input__box"
-              type="email"
-              th:placeholder="email"
-              name="email"
-              th:value="${email}"
-              hidden
-              readonly
-            />
-            <input
-              class="input__box"
-              type="password"
-              placeholder="New Password"
-              name="password"
-              id="new"
-              required
-            />
-            <input
-              class="input__box"
-              type="password"
-              placeholder="Re-enter Password"
-              name="cpassword"
-              id="again"
-              required
-            />
-            <span
-              class="input__box"
-              id="message"
-              style="
+        <form th:action="@{/updatepassword}" method="post">
+          <input class="input__box" type="email" th:placeholder="email" name="email" th:value="${email}" hidden
+            readonly />
+          <input class="input__box" type="password" placeholder="New Password" name="password" id="new" required />
+          <input class="input__box" type="password" placeholder="Re-enter Password" name="cpassword" id="again"
+            required />
+          <span class="input__box" id="message" style="
                 color: red;
                 font-size: 12px;
                 padding-top: 0px;
                 background-color: transparent;
-              "
-            ></span>
+              "></span>
 
-            <input
-              class="btn btn__login"
-              id="submit"
-              type="submit"
-              value="Change Password"
-              required
-            />
-          </form>
-        </div>
+          <input class="btn btn-primary btn__login" id="submit" type="submit" value="Change Password" required />
+        </form>
       </div>
-    </section>
-    <section th:replace="/fragment/footer :: footer"></section>
-  </body>
-  <script type="text/javascript">
-    let again = document.getElementById("again");
-    again.addEventListener("keyup", matchPassword);
-    var submit = document.getElementById("submit");
-    submit.disabled = true;
-    function matchPassword() {
-      var pass1 = document.getElementById("new").value;
-      var pass2 = document.getElementById("again").value;
-      var error = document.getElementById("message");
-      error.innerText = "Enter identical password on both fields.";
+    </div>
+  </section>
+  <footer th:replace="/fragment/footer :: footer"></footer>
+</body>
+<script type="text/javascript">
+  let again = document.getElementById("again");
+  again.addEventListener("keyup", matchPassword);
+  var submit = document.getElementById("submit");
+  submit.disabled = true;
+  function matchPassword() {
+    var pass1 = document.getElementById("new").value;
+    var pass2 = document.getElementById("again").value;
+    var error = document.getElementById("message");
+    error.innerText = "Enter identical password on both fields.";
 
-      if (pass1 === pass2) {
-        error.innerText = "";
-        submit.disabled = false;
-      }
+    if (pass1 === pass2) {
+      error.innerText = "";
+      submit.disabled = false;
     }
-  </script>
+  }
+</script>
+
 </html>
