--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -8,7 +8,7 @@
         <div class='full__width' th:insert="fragment/nav.html :: navbar"></div>
 
         <!-- Details -->
-        <section>
+        <section class="details">
             <div class="container details__container">
                 <!-- left details -->
                 <div class="left__detail">
@@ -34,11 +34,11 @@
                         </div>
                             <div class="detail__amount">
                                 <span>Amount: Rs.&nbsp;
-                                    <input type="number" class="detail__input" name="amount" id="paymentAmount">
+                                    <input type="number" class="detail__input"  min="1" oninput="validity.valid||(value='')" name="amount" id="paymentAmount">
                                 </span>
-                                <span id="message" style="color:red; background-color: #ff22gg"></span>
+                                <span id="message" style="color:red;"></span>
 
-                                <button class="btn" id="confirm">Confirm</button>
+                                <button class="btn btn-primary" id="confirm">Confirm</button>
 
                             </div>
                     </div>
@@ -114,7 +114,7 @@
                     <form th:action="@{/paywithcollateral}" class="detail__form" method="post">
                         <input type="hidden" id="companyId" name="companyId" th:value="${company.id}">
                         <input type="hidden" id="totalAmount" name="amount">
-                        <button type="submit" class="btn btn-success" disabled id="submit">Pay with Collateral</button>
+                        <button type="submit" class="btn btn-primary" disabled id="submit">Pay with Collateral</button>
                     </form>
 
                 </div>
