--- a/src/main/resources/templates/load_fund.html
+++ b/src/main/resources/templates/load_fund.html
@@ -5,40 +5,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    	<link rel="stylesheet" href="css/load_fund.css">
+    <link rel="stylesheet" href="css/load_fund.css">
 
     <title>Sanolagani</title>
+
     <head th:replace="fragment/head.html :: headerfiles"></head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
- 
+
 </head>
 
 <body>
 
- <header class='container header__container' th:replace="fragment/header.html :: header"></header>
-	<div class='full__width' th:insert="fragment/nav.html :: navbar"> </div>
+    <header class='container header__container' th:replace="fragment/header.html :: header"></header>
+    <div class='full__width' th:insert="fragment/nav.html :: navbar"> </div>
 
     <!-- Dashboard -->
     <section class="dashboard">
         <div class=" dashboard__container">
             <!-- left dashboard -->
-            <div class="left__dashboard board">
-                <div><a href="#">Sanolagani Dashboard</a></div>
-                <div><a href="#">My Information</a></div>
-                     <div><a href="#">My Investment</a></div>
-                <div class="dropdown">
-                    <button onclick="fundManagement()" class="drop-btn">Fund Management</button>
-                    <div id="fundManagement" class="fundManagementContent">
-                        <a href=""><i class="fa-sharp fa-solid fa-arrow-right"></i>&nbsp;Collateral Management</a>
-						<a href="#"><i class="fa-sharp fa-solid fa-arrow-right"></i>&nbsp;Fund Transfer History</a>
-						<a href="#"><i class="fa-sharp fa-solid fa-arrow-right"></i>&nbsp;Fund Settlement</a>
-						</div>
+            <div class="left__dashboard board" th:fragment="left-fragment">
+                <div class="dashboard-title-wrap">
+                    <div class="dashboard-title"><a th:href="@{/riskinfo}">Dashboard</a></div>
+                    <div class="dashboard-title"><a th:href="@{/myinfo}">My Information</a></div>
+                    <div class="dashboard-title"><a th:href="@{'/investmenthistory/'}">My Investment</a></div>
+
+                    <div class="dropdown-manage-fund">
+                        <button onclick="manageFund()" class="drop-btn">
+                            Manage Fund
+                            <span>&nbsp;v&nbsp;</span>
+                        </button>
+                        <div id="fundManagement" class="fundManagementContent">
+                            <div> <a th:href="@{'/collateralsummery/'+${id}+'/'}"><i
+                                        class="fa-sharp fa-solid fa-arrow-right"></i>&nbsp;Collateral History</a></div>
+
+                            <div><a th:href="@{'/fundhistory/'+${id}+'/'}"><i
+                                        class="fa-sharp fa-solid fa-arrow-right"></i>&nbsp;Fund Transfer History</a>
+                            </div>
+                            <div><a href="#"><i class="fa-sharp fa-solid fa-arrow-right"></i>&nbsp;Fund Settlement</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <!-- center dashboard -->
-            <div class="center__dashboard board">
+            <div class="center__load board">
                 <form action="#">
                     <div class="bank_row">
                         <label class="load-title" for="bank">BANK <span style="color: red">*</span></label>
@@ -66,8 +78,8 @@
                         <input class="load_input" id="remarks" type="text" name="remarks" required>
                     </div>
                     <div>
-                        <input type="button" class="btn" id="payment-button" value="continue"></input>
-                        <button type="reset" class="btn btn-danger">Reset</button>
+                        <input type="button" class="btn btn-primary" id="payment-button" value="continue"></input>
+                        <button type="reset" class="btn">Reset</button>
                     </div>
                 </form>
 
@@ -94,20 +106,20 @@
     </section>
 
     <!-- Footer -->
-<footer>
-		<footer th:insert="fragment/footer.html :: footer">
+    <footer th:insert="fragment/footer.html :: footer"></footer>
 
-		</footer>
 
-    <!-- Fund Management Dropdown Script -->
-    <script>
-        function fundManagement() {
-            document.getElementById("fundManagement").classList.toggle("show");
-        }
 
-    </script>
+        <!-- Fund Management Dropdown Script -->
+        <script>
+            function manageFund() {
+                document.getElementById("fundManagement").classList.toggle("show");
+            }
+
+        </script>
 </body>
 <script src="https://khalti.s3.ap-south-1.amazonaws.com/KPG/dist/2020.12.17.0.0.0/khalti-checkout.iffe.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script th:src="@{/js/payment.js}"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script th:src="@{/js/payment.js}"></script>
+
 </html>
