working on company overview

--- a/src/main/resources/static/css/companydashboard.css
+++ b/src/main/resources/static/css/companydashboard.css
@@ -54,9 +54,10 @@ sup{
     background-color: crimson;
     padding: 2px;
     border-radius: 50%;
-    font-size: .8rem;
-    width: 1.2rem;
-    height: 1.2rem;
+    font-size: 1rem;
+    font-weight: 400;
+    width: 2rem;
+    height: 2rem;
     text-align: center;
     margin-left: 5px;
 }
