--- a/src/main/resources/templates/fragment/company-dashboard.html
+++ b/src/main/resources/templates/fragment/company-dashboard.html
@@ -6,7 +6,7 @@
         <li><a href="#">Shareholder Management</a></li>
         <li><a href="#">Financial Performance</a></li>
         <li><a href="#">Documents and Reports</a></li>
-        <li><a th:href="@{/notification}">Notification<sup>1</sup></a></li>
+        <li><a th:href="@{/notification}">Notification<sup th:if="${unread}">[[${unread}]]</sup></a></li>
         <li><a th:href="@{/logout}">Setting and Account Management</a></li>
     </ul>
 </div>
