--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -86,8 +86,26 @@ body {
 }
 
 h1, h2, h3, h4 {
-	font-weight: 400;
 	color: var(--color-dark);
+}
+h1 {
+	font-size: 1.4rem;
+	font-weight: 400;
+}
+
+h2 {
+	font-size: 1.3rem;
+	font-weight: 400;
+}
+
+h3 {
+	font-size: 1.2rem;
+	font-weight: 200;
+}
+
+h4 {
+	font-size: 1.1rem;
+	font-weight: 100;
 }
 
 h5 {
@@ -97,18 +115,11 @@ h5 {
 	margin-top: -10px;
 }
 
-h1 {
-	font-size: 2.5rem;
-}
-
-section {
-}
-
 .text-light {
 	color: var(--color-light);
 }
 
-a {
+.link {
 	color: #fff;
 	transition: var(--transition);
 	font-size: 18px;
