--- a/src/main/resources/static/css/companydashboard.css
+++ b/src/main/resources/static/css/companydashboard.css
@@ -46,7 +46,6 @@ body {
 
 .chart-container {
   flex-grow: 1;
-  /* Add other styling properties as needed */
 }
 
 sup{
@@ -62,4 +61,68 @@ sup{
     margin-left: 5px;
 }
 
+.input-field{
+    margin: 10px 10px 10px 3rem;
+    width: 80%;
+    height: 3rem;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    padding: 0 0 0 2rem;
+    font-size: 1.2rem;
+}
 
+.file-input{
+    position: absolute;
+    cursor: pointer;
+    /* visibility: hidden; */
+    opacity: 0;
+    left: 330px;
+    width: 235px;
+    height:3rem;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    background-color: #ccc;
+}
+.help-text{
+    display: block;
+    margin: 1rem 0;
+    font-size: 1.1rem;
+    color: #555;
+}
+
+#title{
+    width: 95%;
+    height: 95%;
+    border: none;
+    font-size: 1.1rem;
+}
+#title:focus{
+    outline: none;
+}
+
+#file-name{
+    position: absolute;
+    top: 88px;
+    margin-left: 120px;
+    text-align: center;
+    font-size: 1.2rem;
+}
+.input-label{
+    cursor: pointer;
+    border: 1px solid #cccccc;
+    border-radius: 5px;
+    padding: 0px;
+    margin: 0px;
+    background: #dddddd;
+    height: 100%;
+    width: 200px;
+    display: block;
+    text-align: center;
+    color: #333;
+}
+.input-label:invalid+span {
+    color: #000000;
+  }
+.input-label:valid+span {
+    color: #ffffff;
+  }
