--- a/src/main/resources/templates/company-info.html
+++ b/src/main/resources/templates/company-info.html
@@ -25,26 +25,29 @@
         <nav class='container nav__container'>
           <div class="left">
               <ul>
-                <li><a href="#company-details"  class="nav-link-sm-text">Details</a></li>
-                <li><a th:href="@{/companyregister}" class="nav-link-sm-text">Documents</a></li>
-                <li><a th:href="@{/company}" class="nav-link-sm-text">Success Stories</a></li>
-                <li><a href="#management-teams" class="nav-link-sm-text">Management</a></li>
-                <li><a href="#" class="nav-link-sm-text">More Information</a></li>
+                <li><a href="#company-details"  class="nav-link-sm-text link">Details</a></li>
+                <li><a th:href="@{/companyregister}" class="nav-link-sm-text link">Documents</a></li>
+                <li><a th:href="@{/company}" class="nav-link-sm-text link">Success Stories</a></li>
+                <li><a href="#management-teams" class="nav-link-sm-text link">Management</a></li>
+                <li><a href="#" class="nav-link-sm-text link">More Information</a></li>
               </ul>
           </div>
         </nav>
       </div>
       <br/>
-      <h3 id='company-details'>Company Details</h3>
-      <p class='gray f-13'>This Reg A+ offering is made available through Sanolagani Primary.
-        This investment is speculative, illiquid, and involves a high degree of
-        risk, including possible loss of your entire investment. For more
-        information about this offering, please view <span th:text="${company.companyname}"/>’s Offering Circular
-        and Related Risks. In addition, as described in the Offering Circular,
-        the Company retains the right to continue the offering beyond the Termination Date.
-        in its sole discretion.</p>
+      <h1 id='company-details'>Company Details</h1>
+      <div th:each="article : ${articles}">
+        <div class="article">
+          <h2 th:text="${article.title}"></h2>
+          <hr/>
+          <span th:text="${article.getAuthored_date_time()}"></span>
+          <hr/>
+          <div>[(${article.getFull_text()})]</div>
+        </div>
+        <br/><br/><br/>
+      </div>
         <br/>
-        <h3 id='management-teams'>Management Team</h3>
+        <h1 id='management-teams'>Management Team</h1>
           <table class="bod">
             <thead>
                 <th>Management Team</th>
