--- a/src/main/resources/templates/fragment/company-card.html
+++ b/src/main/resources/templates/fragment/company-card.html
@@ -4,8 +4,11 @@
         <img th:src="@{'/documents/' + ${company.id} + '/' + ${company.image}}" class='card__image' alt="card-image" />
         <h3 class="company-name" th:text="${company.companyname}" />
     </a>
-    <p class='info'>
-        <strong>[[${totalUsersInvestedMap.get(company.companyname)}]]</strong> investors have invested <strong>Rs. <i>[[${totalApplyShareMap.get(company.companyname)*company.price_per_share}]]</i>+</strong> so far.
+    <p class='info' th:if="${totalUsersInvestedMap.get(company.companyname)} > 0">
+        <strong>[[${totalUsersInvestedMap.get(company.companyname)}]]</strong> investors have invested <strong>Rs. <i>[[${#numbers.formatInteger(totalApplyShareMap.get(company.companyname)*company.price_per_share, 3 ,'COMMA')}]]</i>+</strong> so far.
+    </p>
+    <p class='info' th:if="${totalUsersInvestedMap.get(company.companyname)} == 0">
+        <strong>Be an early investor.</strong>
     </p>
     <div class="card__score">
         <div class="raised">
