--- a/src/main/resources/templates/fragment/company-dashboard.html
+++ b/src/main/resources/templates/fragment/company-dashboard.html
@@ -2,6 +2,7 @@
     <ul>
         <li><a href="#" class="active">Dashboard</a></li>
         <li><a th:href="@{/company/overview}">Company Overview</a></li>
+        <li><a th:href="@{/company/all-articles}">Articles</a></li>
         <li><a href="#">Investment Details</a></li>
         <li><a href="#">Shareholder Management</a></li>
         <li><a href="#">Financial Performance</a></li>
