--- a/src/main/resources/templates/fragment/nav.html
+++ b/src/main/resources/templates/fragment/nav.html
@@ -3,20 +3,20 @@
 <nav class='container nav__container' th:fragment="navbar">
 	<div class="left">
 		<ul>
-			<li><a href="/">Home</a></li>
-			<li><a href="#">Start Investing</a></li>
-			<li><a th:href="@{/companyregister}">Raise Capital</a></li>
-			<li><a th:href="@{/company}">Company</a></li>
-			<li><a href="#">Learn</a></li>
+			<li><a href="/" class="link">Home</a></li>
+			<li><a href="#" class="link">Start Investing</a></li>
+			<li><a th:href="@{/companyregister}" class="link">Raise Capital</a></li>
+			<li><a th:href="@{/company}" class="link">Company</a></li>
+			<li><a href="#" class="link">Learn</a></li>
 		</ul>
 	</div>
 	<div class="right">
 		<ul>
-			<li sec:authorize="hasRole('ROLE_ANONYMOUS')"><a th:href="@{/login}">Login</a></li>
-			<li sec:authorize="hasRole('ROLE_ANONYMOUS')"><a th:href="@{/register}">Sign Up</a></li>
+			<li sec:authorize="hasRole('ROLE_ANONYMOUS')"><a th:href="@{/login}" class="link">Login</a></li>
+			<li sec:authorize="hasRole('ROLE_ANONYMOUS')"><a th:href="@{/register}" class="link">Sign Up</a></li>
 
 			
-            <li sec:authorize="hasRole('ROLE_USER')"><a th:href="@{/company/mywatchlist}">My Watchlist</a></li>
+            <li sec:authorize="hasRole('ROLE_USER')"><a th:href="@{/company/mywatchlist}" class="link">My Watchlist</a></li>
 
 			<li sec:authorize="hasRole('ROLE_USER')"
 				style="position: relative; cursor: pointer; color:#fff; font-size: 18px; user-select: none;" onclick="document.querySelector('.sub-menu-wrap').classList.toggle('active-menu')"> Profile
