added documents table

--- a/src/main/resources/templates/company-info.html
+++ b/src/main/resources/templates/company-info.html
@@ -26,8 +26,8 @@
           <div class="left">
               <ul>
                 <li><a href="#company-details"  class="nav-link-sm-text">Details</a></li>
-                <li><a th:href="@{/companyregister}" class="nav-link-sm-text">Documents</a></li>
-                <li><a th:href="@{/company}" class="nav-link-sm-text">Success Stories</a></li>
+                <li><a href="#documents" class="nav-link-sm-text">Documents</a></li>
+                <li><a href="#success-stories" class="nav-link-sm-text">Success Stories</a></li>
                 <li><a href="#management-teams" class="nav-link-sm-text">Management</a></li>
                 <li><a href="#" class="nav-link-sm-text">More Information</a></li>
               </ul>
@@ -95,6 +95,31 @@
             </tbody>
           </table>
         </h3>
+        <h3 id='documents'>Documents</h3>
+        <div class="news">
+          <table class="news-table">
+              <tr class="news-head">
+                  <th class="news-head-date">DATE</th>
+                  <th class="news-head-event">NEWS</th>
+              </tr>
+              <tr class="news-row">
+                  <td class="news-data-date"><a href="#">May 7, 2023<br><img src="./images/voklagyo.png" alt="img" class="doc-img"></td>
+  
+                  <td class="news-data-event"><a href="#">News goes here</a></td>
+              </tr>
+              <tr class="news-row">
+                  <td class="news-data-date"><a href="#">May 7, 2023<br><img src="./images/voklagyo.png" alt="img" class="doc-img"></td>
+  
+                  <td class="news-data-event"><a href="#">News goes here</a></td>
+              </tr>
+              <tr class="news-row">
+                  <td class="news-data-date"><a href="#">May 7, 2023<br><img src="./images/voklagyo.png" alt="img" class="doc-img"></td>
+  
+                  <td class="news-data-event"><a href="#">News goes here</a></td>
+              </tr>
+          </table>
+      </div>
+        <h3 id='success-stories'>Success Stories</h3>
     </div>
 
 
