--- a/src/main/resources/templates/companydashboard.html
+++ b/src/main/resources/templates/companydashboard.html
@@ -11,9 +11,8 @@
     <div class="sidebar">
         <ul>
             <li><a href="#" class="active">Dashboard</a></li>
+            <li><a href="#">Company overview</a></li>
             <li><a th:href="@{/company/investment/details}">Investment Details</a></li>
-            <li><a href="#">Shareholder Management</a></li>
-            <li><a href="#">Financial Performance</a></li>
             <li><a href="#">Documents and Reports</a></li>
 
             <li th:if="${unread != 0}"><a th:href="@{/notification}">Notification<span class="notification-count">[[${unread}]]</span></a></li>
